fix menu z-index on mobile

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -120,6 +120,7 @@ nav {
   position: absolute;
   top: 0;
   width: 100%;
+  z-index: 5;
 
   @include breakpoint($desktop) {
     background-color: transparent;
